--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
+  "description": "Selfmade Developer Blog",
   "version": "1.1.3",
-  "author": "Austin Green",
+  "author": "Paweł Karniej",
   "dependencies": {
     "bulma": "^0.7.0",
     "gatsby": "^2.0.66",
@@ -36,10 +36,10 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "start": "npm run develop",
+    "start": "yarn develop",
     "clean": "rimraf .cache public",
-    "build": "npm run clean && gatsby build",
-    "develop": "npm run clean && gatsby develop",
+    "build": "yarn clean && gatsby build",
+    "develop": "yarn clean && gatsby develop",
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
