--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "gatsby-starter-netlify-cms",
+  "name": "selfmadedev.com",
   "description": "Selfmade Developer Blog",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "author": "Paweł Karniej",
   "dependencies": {
     "bulma": "^0.7.0",
-    "gatsby": "^2.0.66",
-    "gatsby-image": "^2.0.23",
-    "gatsby-plugin-disqus": "^1.2.0",
-    "gatsby-plugin-google-analytics": "^2.3.4",
-    "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-netlify-cms": "^4.1.7",
-    "gatsby-plugin-purgecss": "^4.0.0",
-    "gatsby-plugin-react-helmet": "^3.0.4",
-    "gatsby-plugin-sass": "^2.0.7",
-    "gatsby-plugin-sharp": "^2.0.15",
-    "gatsby-remark-copy-linked-files": "^2.0.7",
-    "gatsby-remark-images": "^3.0.1",
-    "gatsby-remark-relative-images": "^0.2.1",
-    "gatsby-source-filesystem": "^2.0.12",
-    "gatsby-transformer-remark": "^2.1.15",
-    "gatsby-transformer-sharp": "^2.1.9",
-    "lodash": "^4.17.5",
-    "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms": "^2.3.1",
-    "node-sass": "^4.11.0",
-    "parcel-bundler": "^1.9.4",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.4.1",
-    "react-helmet": "^5.2.0",
-    "uuid": "^3.2.1"
+    "gatsby": "^2.24.34",
+    "gatsby-image": "^2.4.14",
+    "gatsby-plugin-disqus": "^1.2.2",
+    "gatsby-plugin-google-analytics": "^2.3.13",
+    "gatsby-plugin-netlify": "^2.3.12",
+    "gatsby-plugin-netlify-cms": "^4.3.11",
+    "gatsby-plugin-purgecss": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sharp": "^2.6.25",
+    "gatsby-remark-copy-linked-files": "^2.3.12",
+    "gatsby-remark-images": "^3.3.25",
+    "gatsby-remark-relative-images": "^0.3.0",
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-remark": "^2.8.28",
+    "gatsby-transformer-sharp": "^2.5.12",
+    "lodash": "^4.17.19",
+    "lodash-webpack-plugin": "^0.11.5",
+    "netlify-cms": "^2.4.2",
+    "node-sass": "^4.14.1",
+    "parcel-bundler": "^1.12.4",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "uuid": "^8.3.0"
   },
   "keywords": [
     "gatsby"
@@ -41,13 +41,13 @@
     "start": "yarn develop",
     "clean": "rimraf .cache public",
     "build": "yarn clean && gatsby build",
-    "develop": "yarn clean && gatsby develop",
+    "develop": "yarn clean && gatsby develop -p 9000",
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.15.3",
-    "rimraf": "^3.0.0"
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2"
   }
 }
