--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-responsive": "^8.1.0",
+    "react-twitter-widgets": "^1.9.5",
     "uuid": "^8.3.0"
   },
   "keywords": [
