--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Paweł Karniej",
   "dependencies": {
     "bulma": "^0.7.0",
+    "expo": "^38.0.9",
     "gatsby": "^2.24.34",
     "gatsby-image": "^2.4.14",
     "gatsby-plugin-disqus": "^1.2.2",
@@ -13,10 +14,13 @@
     "gatsby-plugin-netlify-cms": "^4.3.11",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-react-native-web": "^3.1.0",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.25",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-copy-linked-files": "^2.3.12",
     "gatsby-remark-images": "^3.3.25",
+    "gatsby-remark-prismjs": "^3.5.10",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-remark": "^2.8.28",
@@ -26,10 +30,15 @@
     "netlify-cms": "^2.4.2",
     "node-sass": "^4.14.1",
     "parcel-bundler": "^1.12.4",
+    "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-native": "^0.63.2",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.12.0",
+    "react-native-web": "~0.11.7",
     "react-responsive": "^8.1.0",
     "react-twitter-widgets": "^1.9.5",
     "uuid": "^8.3.0"
