--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "gatsby-transformer-sharp": "^2.5.12",
     "lodash": "^4.17.19",
     "lodash-webpack-plugin": "^0.11.5",
-    "netlify-cms": "^2.4.2",
+    "netlify-cms-app": "^2.12.19",
     "node-sass": "^4.14.1",
     "parcel-bundler": "^1.12.4",
     "prismjs": "^1.21.0",
