--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,9 @@
   },
   "packageRules": [
     {
-      "packageNames": ["netlify-cms"],
+      "packageNames": [
+        "netlify-cms-app"
+      ],
       "rangeStrategy": "bump"
     }
   ]
