--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,6 @@
   publish = "public"
   command = "npm run build"
 [build.environment]
+  NODE_VERSION = "16"
   YARN_VERSION = "1.9.4"
   YARN_FLAGS = "--no-ignore-optional"
