--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lodash": "^4.17.19",
     "lodash-webpack-plugin": "^0.11.5",
     "netlify-cms-app": "^2.12.19",
-    "node-sass": "^4.14.1",
+    "sass": "^1.26.10",
     "parcel-bundler": "^1.12.4",
     "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
